--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <img class="profile-image" src="images/Untitled-7 copy.jpg" alt="">
+            <img class="profile-image" src="Untitled-7 copy.jpg" alt="">
             <div class="header-bio">
                 <h1>Montaqium Tanjil</h1>
                 <h3>Computer Engineer</h3>
